--- a/package.json
+++ b/package.json
@@ -4,15 +4,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@geist-ui/react": "^2.0.2",
+    "@geist-ui/react-icons": "^1.0.0",
     "@tensorflow-models/coco-ssd": "^2.0.3",
     "@tensorflow/tfjs": "^1.7.4",
     "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
-    "@testing-library/user-event": "^7.2.1",
+    "@testing-library/react": "^9.3.2",
+    "@testing-library/user-event": "^7.1.2",
     "@zeit-ui/react": "0.0.1-beta.30",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.3",
+    "use-light-switch": "^1.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -38,6 +41,6 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^2.2.0"
+    "gh-pages": "^3.1.0"
   }
 }
